--- a/src/pages/favorites/favorites.module.css
+++ b/src/pages/favorites/favorites.module.css
@@ -33,15 +33,15 @@
 
 .title {
   font-family: "Zaslia";
-  user-select: none;
-}
-
-.title h1 {
+  color: white;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
   font-size: 10rem;
 }
 
 @media (max-width: 768px) {
-  .title h1 {
+  .title {
     font-size: 3rem;
   }
 }
